@@ -179,24 +179,32 @@ RootInlineBox* InlineBox::root()
 
 bool InlineBox::nextOnLineExists() const
 {
-    if (!parent())
-        return false;
-    
-    if (nextOnLine())
-        return true;
-    
-    return parent()->nextOnLineExists();
+    if (!m_determinedIfNextOnLineExists) {
+        m_determinedIfNextOnLineExists = true;
+
+        if (!parent())
+            m_nextOnLineExists = false;
+        else if (nextOnLine())
+            m_nextOnLineExists = true;
+        else
+            m_nextOnLineExists = parent()->nextOnLineExists();
+    }
+    return m_nextOnLineExists;
 }
 
 bool InlineBox::prevOnLineExists() const
 {
-    if (!parent())
-        return false;
-    
-    if (prevOnLine())
-        return true;
-    
-    return parent()->prevOnLineExists();
+    if (!m_determinedIfPrevOnLineExists) {
+        m_determinedIfPrevOnLineExists = true;
+        
+        if (!parent())
+            m_prevOnLineExists = false;
+        else if (prevOnLine())
+            m_prevOnLineExists = true;
+        else
+            m_prevOnLineExists = parent()->prevOnLineExists();
+    }
+    return m_prevOnLineExists;
 }
 
 InlineBox* InlineBox::firstLeafChild()
