@@ -58,6 +58,10 @@ public:
         , m_hasEllipsisBox(false)
         , m_reversed(false)
         , m_treatAsText(true)
+        , m_determinedIfNextOnLineExists(false)
+        , m_determinedIfPrevOnLineExists(false)
+        , m_nextOnLineExists(false)
+        , m_prevOnLineExists(false)
         , m_toAdd(0)
     {
     }
@@ -85,6 +89,10 @@ public:
         , m_hasEllipsisBox(false)
         , m_reversed(false)
         , m_treatAsText(true)
+        , m_determinedIfNextOnLineExists(false)
+        , m_determinedIfPrevOnLineExists(false)
+        , m_nextOnLineExists(false)
+        , m_prevOnLineExists(false)
         , m_toAdd(0)
     {
     }
@@ -233,6 +241,10 @@ public: // FIXME: Would like to make this protected, but methods are accessing t
     bool m_reversed : 1;
     bool m_dirOverride : 1;
     bool m_treatAsText : 1; // Whether or not to treat a <br> as text for the purposes of line height.
+    mutable bool m_determinedIfNextOnLineExists : 1;
+    mutable bool m_determinedIfPrevOnLineExists : 1;
+    mutable bool m_nextOnLineExists : 1;
+    mutable bool m_prevOnLineExists : 1;
     int m_toAdd : 13; // for justified text
 };
 
